deploy/dev-ngsa-asb-eastus/monitoring/grafana/05-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checkov.io/skip1: CKV_K8S_35=Grafana container requires env var for secret value
    checkov.io/skip2: CKV_K8S_22=Grafana container needs to create in-system DB
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        aadpodidbinding: grafana-id
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 472
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: acraks3i2qzkkxofr7c.azurecr.io/grafana/grafana:8.5.5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-providers
              mountPath: /etc/grafana/provisioning/dashboards/dashboardproviders.yaml
              subPath: dashboardproviders.yaml
            - name: dashboards-ngsa-prometheus
              mountPath: /var/lib/grafana/dashboards/ngsa-prometheus
            - name: dashboards-ngsa-az-monitor-rel
              mountPath: /var/lib/grafana/dashboards/ngsa-az-monitor-rel
            - name: dashboards-ngsa-az-monitor-perf
              mountPath: /var/lib/grafana/dashboards/ngsa-az-monitor-perf
            - name: dashboards-ngsa-az-blocked-traffic
              mountPath: /var/lib/grafana/dashboards/ngsa-az-blocked-traffic
            - name: dashboards-ngsa-fluentbit
              mountPath: /var/lib/grafana/dashboards/ngsa-fluentbit
            - name: dashboards-flux-cluster
              mountPath: /var/lib/grafana/dashboards/flux-cluster
            - name: dashboards-flux-control-plane
              mountPath: /var/lib/grafana/dashboards/flux-control-plane
            - name: grafana-secrets
              mountPath: /mnt/secrets
              readOnly: true
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-providers
          configMap:
            name: grafana-dashboard-providers
        - name: dashboards-ngsa-prometheus
          configMap:
            name: grafana-dashboards-ngsa-prometheus
        - name: dashboards-ngsa-az-monitor-rel
          configMap:
            name: grafana-dashboards-ngsa-az-monitor-rel
        - name: dashboards-ngsa-az-monitor-perf
          configMap:
            name: grafana-dashboards-ngsa-az-monitor-perf
        - name: dashboards-ngsa-az-blocked-traffic
          configMap:
            name: grafana-dashboards-ngsa-az-blocked-traffic
        - name: dashboards-ngsa-fluentbit
          configMap:
            name: grafana-dashboards-ngsa-fluentbit
        - name: dashboards-flux-cluster
          configMap:
            name: grafana-dashboards-flux-cluster
        - name: dashboards-flux-control-plane
          configMap:
            name: grafana-dashboards-flux-control-plane
        - name: grafana-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: grafana-secrets
      nodeSelector:
        agentpool: npuser01
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - grafana-eastus-dev.cse.ms
  http:
  - route:
    - destination:
        port:
          number: 3000
        host: grafana
